--- a/index.html
+++ b/index.html
@@ -3,3 +3,16 @@ layout: home
 title: Tell me something and I won't be able to tell you who you are
 subtitle: An Unfortunate Data Story
 ---
+
+## No patterns do not mean no success.
+We started this project, in which we analyse millions of quotes, with the goal of finding patterns between language use and speaker attributes. Maybe we could have gotten answers to questions such as:
+
+### Do politicians use more comparative adverbs than other people?
+### Do young people speak with a more positive sentiment than other people?
+
+However, we could not find any patterns between speakers and the way they talk. Nevertheless, we are happy with our findings. To live in a less predictable world,
+in which we can not tell exactly who you are simply by looking at the used language features, is sure much more fun.
+
+Please follow us on this journey, in which we present the differences (or maybe more appropriately the lack of them?) between speakers and their attributes.
+
+
