--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: page
 title: Tell me something and I won't be able to tell you who you are
 subtitle: An Unfortunate Data Story
 ---
